# ios-screen-time-screenshot-processing

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .hadolint.yaml  .semgrep.yml  .semgrepignore  .yamllint.yml  Cargo.toml  README.md  alembic.ini  bunfig.toml  deny.toml  pyproject.toml  rust-toolchain.toml  rustfmt.toml  sgconfig.yml  vulture_whitelist.py
.cargo/: audit.toml  config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  contract-checks.yml  deploy-gh-pages.yml  gh-pages.yml  tauri-build.yml
alembic/: env.py
alembic/versions/: 1dc90afb6cac_add_original_filepath_to_screenshots.py  31a3e57cdd5d_initial_schema.py  3613c2977638_add_missing_columns_annotation_status_.py  825cee0c9c5c_add_processing_metadata_to_screenshots.py  8d2e3be6f7de_add_content_hash_to_screenshots.py  a7b8c9d0e1f2_rename_required_to_target_annotations.py  b8c9d0e1f2a3_add_processing_method_fields.py  c1d2e3f4g5h6_add_annotation_unique_constraint.py  c211dfc3aaff_standardize_imagetype_enum_values.py  d2e3f4g5h6i7_add_user_queue_state_unique_constraint.py  e3f4g5h6i7j8_add_annotation_audit_log.py  f4g5h6i7j8k9_add_missing_indexes.py  g5h6i7j8k9l0_add_dispute_resolution_fields.py  h6i7j8k9l0m1_add_preprocessing_jobs_table.py  i7j8k9l0m1n2_add_processing_started_at.py  j8k9l0m1n2o3_add_composite_perf_indexes.py  k9l0m1n2o3p4_add_content_hash_unique_index.py  l0m1n2o3p4q5_add_workflow_engine_tables.py
crates/processing/: Cargo.toml
crates/processing/src/: bar_extraction.rs  boundary_optimizer.rs  generated_constants.rs  image_utils.rs  lib.rs  ocr.rs  pipeline.rs  types.rs  wasm.rs
crates/processing/src/grid_detection/: line_based.rs  lookup.rs  mod.rs  ocr_anchored.rs  strategies.rs
crates/processing/tests/: golden_pipeline.rs  title_smoke.rs
crates/processing/tests/snapshots/: IMG_0806_bar_extraction.json  IMG_0806_dark_mode.json  IMG_0806_grid.json  IMG_0806_pipeline.json  IMG_0806_pipeline_ocr.json  IMG_0807_bar_extraction.json  IMG_0807_dark_mode.json  IMG_0807_grid.json  IMG_0807_pipeline.json  IMG_0808_bar_extraction.json  IMG_0808_dark_mode.json  IMG_0808_pipeline_ocr.json  IMG_0809_bar_extraction.json  IMG_0809_dark_mode.json  IMG_0809_grid.json  IMG_0809_pipeline.json
docker/: .env.example  .env.production.example  Dockerfile.processing-test  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.wasm.yml  docker-compose.yml  validate-secrets.sh
docker/backend/: Dockerfile  Dockerfile.ci  Dockerfile.dev  entrypoint.sh
docker/frontend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.wasm  docker-entrypoint.sh
docker/nginx/: nginx.conf  nginx.wasm.conf
docker/paddleocr-server/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docker/postgres/: init-databases.sh
docker/wasm-build/: Dockerfile
docs/: API_VERSIONING_IMPLEMENTATION.md  DATABASE_BEHAVIOR.md  GRID_DETECTION.md  README.md  TODO.md  TRAINING_PLOT_DETECTION_MODEL.md  VERIFICATION_REPORT.md  handoff-wasm-parity.md
docs/architecture/: ARCHITECTURE.md  BACKEND_API.md
docs/deployment/: BACKUP_STRATEGY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_TESTING_GUIDE.md  HA_DEPLOYMENT_PLAN.md  SECURITY.md
docs/getting-started/: QUICK_START.md
docs/guides/: EPHEMERAL_PROCESSING.md
frontend/: .env.example  .env.wasm  .gitignore  .size-limit.json  DEPLOYMENT.md  README.md  bunfig.toml  eslint.config.js  generate-icons.cjs  index.html  knip.json  lighthouserc.json  netlify.toml  package.json  playwright.config.ts  playwright.wasm-annotate.config.ts  playwright.wasm-pipeline-perf.config.ts  playwright.wasm-stress.config.ts  playwright.wasm.config.ts  tsconfig.json  vite.config.ts
frontend/public/: 404.html  config.js  manifest.webmanifest  offline.html  sw.js  test-opencv-worker.html
frontend/scripts/: check-contract-drift.sh  generate-stress-fixtures.ts  setup-e2e-fixtures.sh
frontend/server/: build.ts  dev.ts
frontend/src/: App.tsx  config.ts  env.d.ts  index.css  main.tsx  service-worker.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/benches/: processing_benchmark.rs  scan_benchmark.rs
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/examples/: bench_pipeline.rs
frontend/src-tauri/src/: lib.rs  main.rs
frontend/tests/: README.md  TEST_IMPLEMENTATION_SUMMARY.md  auth.setup.ts  spa-server.py  tsconfig.json  wasm-annotate.spec.ts  wasm-pipeline-perf.spec.ts  wasm-smoke.spec.ts  wasm-stress.spec.ts
rust-python/: Cargo.toml  pyproject.toml
rust-python/src/: lib.rs
scripts/: README.md  backup-db.sh  benchmark-cli.sh  benchmark-features.sh  benchmark-ocr.py  benchmark-wasm-paths.mjs  benchmark_backend.py  benchmark_upload.py  build-wasm-bindgen.sh  build-wasm-emscripten.sh  check-api-types.sh  check-architecture-invariants.sh  check-licenses.sh  check-tauri-contract.py  compare_all_ocr_engines.py  compare_ocr_engines.py  cross-validate-1000.py  cross-validate-1000.sh  deploy.sh  generate-shared-constants.py  migrate_preprocessing_metadata.py  profile-db.sh  profile-request.py  profile.sh  profile_pipeline.py  restore-db.sh  smoke-test.sh  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh  sync-packages.sh  test-all.sh  test_advanced_integration.py  test_hybrid_all_use_cases.py  test_hybrid_engine.py  test_phases_in_docker.py  upload_test_images.py  verify_docker.sh  verify_structure.py
scripts/ocr-bench/: Dockerfile.leptess  Dockerfile.pytesseract  Dockerfile.tesseract_rs  Dockerfile.tesseractjs  analyze.py  bench_pytesseract.py  bench_tesseractjs.mjs  run-all.sh  test_leptess_bbox.rs
shared/: color_constants.json  enums.json  export_columns.json  lookup_table.json  ocr_patterns.json  page_markers.json  processing_constants.json
src/screenshot_processor/: __init__.py  __main__.py
tests/: TEST_SUMMARY.md  conftest.py
tests/benchmark/: test_benchmarks.py  test_matrix_benchmarks.py
tests/contract/: test_cross_implementation_parity.py  test_single_source_of_truth.py
tests/docker/: test_dockerfiles.sh
tests/e2e/: __init__.py  conftest.py  test_complete_workflow.py  (+3 more)
(+493 files in other folders)
