[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ios-screen-time-screenshot-processing"
version = "0.1.0"
description = "Application for extracting battery and screen time usage data from iOS screenshots using OCR"
readme = "README.md"
authors = [
    {name = "iOS Screen Time Screenshot Processing Team"}
]
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "numpy>=1.23",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    # Shared monorepo packages (installed by path in Docker)
    "global-pass-honor-username-auth>=0.1.0",
    "fastapi-errors>=0.1.0",
    "fastapi-logging>=0.1.0",
    "fastapi-ratelimit>=0.1.0",
    "db-toolkit>=0.1.0",
    "fastapi-pagination>=0.1.0",
    "fastapi-files>=0.1.0",
    "fastapi-tasks>=0.1.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "opencv-python-headless>=4.8.0",
    "aiofiles>=24.1.0",
    # Note: slowapi replaced by fastapi-ratelimit from monorepo packages
]

gui = [
    "PyQt6>=6.9.0",
]

ocr = [
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
]

preprocessing = [
    "ios-device-detector @ file:///opt/packages/ios-device-detector",
    "ipad-screenshot-cropper @ file:///opt/packages/ipad-screenshot-cropper",
    "phi-detector-remover @ file:///opt/packages/phi-detector-remover",
]

dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "basedpyright>=1.18.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "hypothesis>=6.0",
    "mutmut>=3.0",
    "pip-audit>=2.0",
    "schemathesis>=3.0",
    "vulture>=2.0",
    "radon>=6.0",
    "pytest-benchmark>=4.0",
    "py-spy>=0.3.0",
    "scalene>=1.5.0",
    "memray>=1.0",
    "pytest-memray>=1.0",
    "pyinstrument>=4.0",
    "wily>=1.0",
]

[project.scripts]
screenshot-gui = "screenshot_processor.gui:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import ordering)
    "UP",    # pyupgrade (modernize syntax)
    "B",     # flake8-bugbear (common bugs)
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (no print statements in src)
    "RET",   # flake8-return (unnecessary return statements)
    "PIE",   # flake8-pie (misc lints)
    "C4",    # flake8-comprehensions
    "PT",    # flake8-pytest-style
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B008",   # function call in default arg (FastAPI Depends pattern)
    "RET504", # unnecessary assignment before return (readability)
    "RET505", # unnecessary else after return (readability preference)
    "UP017",  # datetime.UTC alias (bulk change, do separately)
    "UP037",  # remove quotes from annotations (bulk change)
    "UP042",  # Optional[X] → X | None (bulk change)
    "T201",   # print found (legitimate in scripts/CLI)
    "F403",   # wildcard imports (used in __init__.py re-exports)
    "SIM108", # ternary instead of if-else (readability preference)
    "B904",   # raise from (bulk change across exception handlers)
    "RUF059", # unused __all__ entries (re-exports)
    "RUF022", # unsorted __all__ (cosmetic)
    "SIM102", # collapsible if (readability preference)
    "SIM105", # use contextlib.suppress (readability preference)
    "RUF046", # unnecessary int() cast (round() returns int in py3)
    "SIM103", # return condition directly (readability preference)
    "RUF012", # mutable class var default (ClassVar annotation noise)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402", "T20"]  # sys.path manipulation, print statements OK
"tests/*" = ["T20"]            # print statements OK in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests (run with --benchmark-only)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.basedpyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "**/.venv",
    "**/venv",
    "frontend",
    "alembic/versions",
]
typeCheckingMode = "standard"
pythonVersion = "3.11"
pythonPlatform = "All"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
# Relax numpy/pandas type issues (common in scientific computing)
reportArgumentType = "warning"
reportOperatorIssue = "warning"
# Relax Optional handling (many valid runtime patterns)
reportOptionalSubscript = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalOperand = "warning"
# Relax ORM/dynamic attribute access (SQLAlchemy, pandas, Celery)
reportAttributeAccessIssue = "warning"
reportCallIssue = "warning"
reportReturnType = "warning"
reportAssignmentType = "warning"
reportFunctionMemberAccess = "warning"  # Celery task.s() signatures

[tool.deptry]
extend_default_ignore = ["DEP003"]  # Allow transitive imports (common in monorepo)
ignore = ["DEP002"]  # Missing deps OK (monorepo packages)

# NOTE: [tool.uv.sources] removed for Docker compatibility.
# In Docker, packages are installed by path from the monorepo.
# For local dev, use: uv sync (workspace root) or pip install -e
