[package]
name = "ios-screen-time-image-pipeline"
version = "0.5.1"
edition = "2021"
description = "Bar graph extraction, grid detection, and OCR for iOS Screen Time screenshots — shared between Tauri desktop app and PyO3 Python extension"

[features]
default = ["ocr"]
ocr = ["dep:leptess"]

[dependencies]
image = "0.25"
regex = "1"
lazy_static = "1"
thiserror = "2"
log = "0.4"
leptess = { version = "0.14", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
