[package]
name = "ios-screen-time-image-pipeline"
version = "0.5.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Bar graph extraction, grid detection, and OCR for iOS Screen Time screenshots — shared between Tauri desktop app and PyO3 Python extension"

[lib]
# rlib only. The pipeline_em.rs binary (src/bin/pipeline_em.rs) carries the
# C-ABI exports for the wasm32-unknown-emscripten build; emitting a
# competing cdylib of the lib here would make cargo link a parallel .wasm
# without those exports and fail with `symbol exported via --export not
# found: pipeline_alloc`. Downstream consumers (rust-python, src-tauri)
# already link as rlib.
crate-type = ["rlib"]

# Cannot use workspace = true because the wasm-emscripten module requires
# unsafe_code (C FFI with #[no_mangle] and raw pointer ops). Specify manually.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
todo = "warn"
unimplemented = "warn"

[features]
default = ["ocr"]
ocr = ["dep:leptess"]
# Browser/WASM build (wasm-bindgen, wasm32-unknown-unknown): no native OCR, uses Tesseract.js.
# Build with: wasm-pack build crates/processing --target web --features wasm --no-default-features
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook", "dep:getrandom"]
# Emscripten WASM build (wasm32-unknown-emscripten): full leptess (libtesseract) via C FFI.
# Build with: scripts/build-wasm-emscripten.sh (requires Emscripten SDK + pre-built leptonica/tesseract)
wasm-emscripten = ["ocr"]

[dependencies]
image = "0.25"
regex = "1"
lazy_static = "1"
thiserror = "2"
log = "0.4"
leptess = { version = "0.14", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
