[package]
name = "ios-screen-time"
version = "0.5.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "iOS Screen Time Screenshot Processing desktop app"

[lints]
workspace = true

[lib]
name = "ios_screen_time"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ios-screen-time-image-pipeline = { path = "../../crates/processing", version = "0.5.1" }
dhat = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
devtools = ["tauri/devtools"]
dhat-heap = ["dhat"]

[[bench]]
name = "scan_benchmark"
harness = false

[[bench]]
name = "processing_benchmark"
harness = false
